tests/errors/semantics/invalid_arith_on_lhs.odl
main :: () -> void  {
    x := false;
    x + 1;
};